@@ -15,6 +15,17 @@
 # limitations under the License.
 #
 
+getIbmSslOpts() {
+  version=$1
+  OS390_SSL_ALGO="IbmX509"
+
+  if [ "${version}" -ge 11 ]; then
+    OS390_SSL_ALGO="SunX509"
+  fi
+
+  echo "-Dcom.ibm.jsse2.overrideDefaultTLS=true -Dssl.KeyManagerFactory.algorithm=${OS390_SSL_ALGO}"
+}
+
 # Gets java specific options like add-exports and add-opens
 # First argument is the version of the java
 # Second argument is the current value of the jvm options
@@ -62,6 +73,7 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.io=ALL-UNNAMED \
           --add-opens=java.base/java.net=ALL-UNNAMED \
           --add-opens=java.base/java.nio=ALL-UNNAMED \
+          --add-opens=java.base/java.security.cert=ALL-UNNAMED \
           --add-opens=java.base/java.util=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
           --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
@@ -69,6 +81,8 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.lang=ALL-UNNAMED \
           --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
           --add-opens=java.base/java.math=ALL-UNNAMED \
+          --add-opens=java.base/java.time=ALL-UNNAMED \
+          --add-opens=java.base/sun.security.x509=ALL-UNNAMED \
           --add-opens=java.sql/java.sql=ALL-UNNAMED \
           ${current_value}"
   fi
